Changelog - to keep track of all relevant changes

please update the categories "new features" and "bugfixes" before a pull request merge!

version 2.3.0-dev
new features:
- Added new detector class for RNO-G (+db interface) which uses a mongo-db as source.
The new class allows import/export via compressed json files and has a buffer machinary.
It comes with a class to handle responses of the different signal chain components easily.
- Improved logging module: streamlined logging for NuRadioReco and NuRadioMC modules,
added new STATUS logging level by default, added logging documentation and moved logging
module to NuRadioReco/utilities folder. Logging functionality from NuRadioReco/modules/base
is now deprecated.
- Added StationParameters to store channel IDs of flagged (i.e.) bad channels, the polarisation
which contains the strongest CR pulse and the list of frequency bands which are flagged for RFI.
- Added interface to give (Sim)Channel a group ID . This is implemented as a keyword in the
Detector description, such that it can be added to the Detector description JSON file. The
(Sim)Channel objects can now optionally take a channel_group_id parameter. In a Station, one
can then iterate over a channel group, which yields all channels for a given group ID.
- Added Gaussian tapered and Hann tapered bandpass filters
- Added LOFAR modules for reading data, removing RFI, beamforming and fitting the arrival direction
- Added functionality to remove Channel from Station
- Added LOFAR antenna pattern and function to parse TXT simulation file
- The assume_inf and antenna_by_depth Detector keywords are now saved in the nur file, and will be
loaded again when reading in the Detector from a nur file

bugfixes:
- Fixed bug in get_travel_time in directRayTracing propagation module

version 2.2.1
bugfixes:
- readRNOGDataMattak: fix bug where .root files would not be found if they are passed as relative paths (instead of absolute paths or folder)

version 2.2.0
new features: